--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="stylesheet.css" />
   </head>
   <body>
+    <!-- <audio id="myAudio" src="coin_c_02-102844.mp3"></audio> -->
+    <!-- <audio id="myAudio2" src="game-over-arcade-6435.mp3"></audio> -->
+
     <!-- <img src="avatar.jpg" alt="" /> -->
     <div class="header">
       <h1 id="headingmain">TypeNinja</h1>
