--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="stylesheet.css" />
   </head>
   <body>
-    <div class="header"></div>
-    <img src="information-button.png" alt="i" id="iBtn" />
+    <img src="Assets/Heading-0.png" alt="Heading-Text" id="Heading" />
+    <img src="Assets/information-button.png" alt="i" id="iBtn" />
+    <p id="nav-text">Press 'Shift' to change theme</p>
     <div class="nav">
-      <span class="nav-links classic">😁</span>
-      <span class="nav-links retro">😎</span>
-      <span class="nav-links arcade">😍</span>
+      <span class="nav-links link-0">😁</span>
+      <span class="nav-links link-1">😎</span>
+      <span class="nav-links link-2">😍</span>
     </div>
     <div class="wrapper">
       <button class="warning hidden">
@@ -21,7 +22,7 @@
       </button>
       <div class="container">
         <p class="counter">0 / 171</p>
-        <section class="textField00">
+        <section class="textField00 hidden">
           <span class="letter">t</span><span class="letter">i</span
           ><span class="letter">m</span><span class="letter">e</span
           ><span class="letter"> </span><span class="letter">i</span
@@ -109,98 +110,63 @@
           ><span class="letter">o</span><span class="letter">r</span
           ><span class="letter">k</span>
         </section>
-        <section class="textField01">
-          <span class="letter">i</span><span class="letter"> </span
-          ><span class="letter">h</span><span class="letter">a</span
-          ><span class="letter">v</span><span class="letter">e</span
-          ><span class="letter"> </span><span class="letter">o</span
-          ><span class="letter">f</span><span class="letter">t</span
-          ><span class="letter">e</span><span class="letter">n</span
-          ><span class="letter"> </span><span class="letter">w</span
-          ><span class="letter">a</span><span class="letter">l</span
-          ><span class="letter">k</span><span class="letter">e</span
-          ><span class="letter">d</span><span class="letter"> </span
-          ><span class="letter">d</span><span class="letter">o</span
-          ><span class="letter">w</span><span class="letter">n</span
-          ><span class="letter"> </span><span class="letter">t</span
-          ><span class="letter">h</span><span class="letter">i</span
-          ><span class="letter">s</span><span class="letter"> </span
-          ><span class="letter">s</span><span class="letter">t</span
-          ><span class="letter">r</span><span class="letter">e</span
-          ><span class="letter">e</span><span class="letter">t</span
-          ><span class="letter"> </span><span class="letter">b</span
-          ><span class="letter">e</span><span class="letter">f</span
-          ><span class="letter">o</span><span class="letter">r</span
-          ><span class="letter">e</span><span class="letter"> </span
-          ><span class="letter">b</span><span class="letter">u</span
-          ><span class="letter">t</span><span class="letter"> </span
-          ><span class="letter">t</span><span class="letter">h</span
-          ><span class="letter">e</span><span class="letter"> </span
-          ><span class="letter">p</span><span class="letter">a</span
-          ><span class="letter">v</span><span class="letter">e</span
-          ><span class="letter">m</span><span class="letter">e</span
-          ><span class="letter">n</span><span class="letter">t</span
-          ><span class="letter"> </span><span class="letter">a</span
-          ><span class="letter">l</span><span class="letter">w</span
-          ><span class="letter">a</span><span class="letter">y</span
-          ><span class="letter">s</span><span class="letter"> </span
-          ><span class="letter">s</span><span class="letter">t</span
-          ><span class="letter">a</span><span class="letter">y</span
-          ><span class="letter">e</span><span class="letter">d</span
-          ><span class="letter"> </span> <span class="letter">b</span
-          ><span class="letter">e</span><span class="letter">n</span
-          ><span class="letter">e</span><span class="letter">a</span
-          ><span class="letter">t</span><span class="letter">h</span
-          ><span class="letter"> </span><span class="letter">m</span
-          ><span class="letter">y</span><span class="letter"> </span
-          ><span class="letter">f</span><span class="letter">e</span
-          ><span class="letter">e</span><span class="letter">t</span
-          ><span class="letter"> </span><span class="letter">b</span
-          ><span class="letter">e</span><span class="letter">f</span
-          ><span class="letter">o</span><span class="letter">r</span
-          ><span class="letter">e</span><span class="letter"> </span
-          ><span class="letter">a</span><span class="letter">l</span
-          ><span class="letter">l</span><span class="letter"> </span
-          ><span class="letter">a</span><span class="letter">t</span
-          ><span class="letter"> </span><span class="letter">o</span
-          ><span class="letter">n</span><span class="letter">c</span
-          ><span class="letter">e</span><span class="letter"> </span
-          ><span class="letter">a</span><span class="letter">m</span
-          ><span class="letter"> </span><span class="letter">i</span
-          ><span class="letter"> </span><span class="letter">s</span
-          ><span class="letter">e</span><span class="letter">v</span
+        <section class="textField01 hidden">
+          <span class="letter">o</span><span class="letter">v</span
           ><span class="letter">e</span><span class="letter">r</span
-          ><span class="letter">a</span><span class="letter">l</span
-          ><span class="letter"> </span><span class="letter">s</span
-          ><span class="letter">t</span><span class="letter">o</span
-          ><span class="letter">r</span><span class="letter">i</span
+          ><span class="letter"> </span><span class="letter">a</span
+          ><span class="letter">s</span><span class="letter">k</span
+          ><span class="letter"> </span><span class="letter">t</span
+          ><span class="letter">i</span><span class="letter">m</span
+          ><span class="letter">e</span><span class="letter"> </span
+          ><span class="letter">e</span><span class="letter">n</span
+          ><span class="letter">d</span><span class="letter"> </span
+          ><span class="letter">m</span><span class="letter">e</span
+          ><span class="letter">a</span><span class="letter">n</span
+          ><span class="letter"> </span><span class="letter">p</span
+          ><span class="letter">r</span><span class="letter">e</span
+          ><span class="letter">s</span><span class="letter">e</span
+          ><span class="letter">n</span><span class="letter">t</span
+          ><span class="letter"> </span><span class="letter">w</span
+          ><span class="letter">e</span><span class="letter"> </span
+          ><span class="letter">m</span><span class="letter">u</span
+          ><span class="letter">c</span><span class="letter">h</span
+          ><span class="letter"> </span><span class="letter">w</span
+          ><span class="letter">o</span><span class="letter">u</span
+          ><span class="letter">l</span><span class="letter">d</span
+          ><span class="letter"> </span><span class="letter">i</span
+          ><span class="letter">n</span><span class="letter">t</span
+          ><span class="letter">e</span><span class="letter">r</span
           ><span class="letter">e</span><span class="letter">s</span
-          ><span class="letter"> </span><span class="letter">h</span
-          ><span class="letter">i</span><span class="letter">g</span
-          ><span class="letter">h</span><span class="letter"> </span
-          ><span class="letter">k</span><span class="letter">n</span
-          ><span class="letter">o</span><span class="letter">w</span
+          ><span class="letter">t</span><span class="letter"> </span
+          ><span class="letter">w</span><span class="letter">h</span
+          ><span class="letter">a</span><span class="letter">t</span
+          ><span class="letter"> </span><span class="letter">u</span
+          ><span class="letter">n</span><span class="letter">d</span
+          ><span class="letter">e</span><span class="letter">r</span
+          ><span class="letter"> </span><span class="letter">p</span
+          ><span class="letter">e</span><span class="letter">o</span
+          ><span class="letter">p</span><span class="letter">l</span
+          ><span class="letter">e</span><span class="letter"> </span
+          ><span class="letter">t</span><span class="letter">h</span
+          ><span class="letter">e</span><span class="letter">n</span
+          ><span class="letter"> </span><span class="letter">n</span
+          ><span class="letter">o</span><span class="letter"> </span
+          ><span class="letter">a</span><span class="letter">l</span
+          ><span class="letter">s</span><span class="letter">o</span
+          ><span class="letter"> </span><span class="letter">d</span
+          ><span class="letter">u</span><span class="letter">r</span
           ><span class="letter">i</span><span class="letter">n</span
           ><span class="letter">g</span><span class="letter"> </span
-          ><span class="letter">i</span><span class="letter"> </span
-          ><span class="letter">a</span><span class="letter">m</span
-          ><span class="letter"> </span><span class="letter">o</span
-          ><span class="letter">n</span><span class="letter"> </span
+          ><span class="letter">w</span><span class="letter">i</span
           ><span class="letter">t</span><span class="letter">h</span
-          ><span class="letter">e</span><span class="letter"> </span
-          ><span class="letter">s</span><span class="letter">t</span
-          ><span class="letter">r</span><span class="letter">e</span
-          ><span class="letter">e</span><span class="letter">t</span
-          ><span class="letter"> </span><span class="letter">w</span
-          ><span class="letter">h</span><span class="letter">e</span
-          ><span class="letter">r</span><span class="letter">e</span
-          ><span class="letter"> </span><span class="letter">y</span
-          ><span class="letter">o</span><span class="letter">u</span
-          ><span class="letter"> </span><span class="letter">l</span
-          ><span class="letter">i</span><span class="letter">v</span
-          ><span class="letter">e</span>
+          ><span class="letter"> </span><span class="letter">o</span
+          ><span class="letter">f</span><span class="letter">f</span
+          ><span class="letter"> </span><span class="letter">t</span
+          ><span class="letter">o</span><span class="letter"> </span
+          ><span class="letter">o</span><span class="letter">w</span
+          ><span class="letter">n</span>
         </section>
-        <section class="textField02">
+        <section class="textField02 hidden">
           <span class="letter">w</span><span class="letter">i</span
           ><span class="letter">t</span><span class="letter">h</span
           ><span class="letter"> </span><span class="letter">a</span
@@ -273,8 +239,8 @@
           ><span class="letter">t</span>
         </section>
       </div>
-      <section id="redo">
-        <img src="auto-renew-hover.gif" alt="Restart Button" />
+      <section id="icon">
+        <img src="Assets/Reset.gif" alt="Restart Button" id="redo" />
       </section>
       <span class="modal-restart hidden">Restart Typing! [Esc]</span>
     </div>
@@ -283,7 +249,7 @@
       <p>Highest Speed : <span id="highScore">-</span> wpm</p>
     </div>
     <div class="Results hidden">
-      <h1>Score Card</h1>
+      <h1 id="head">Score Card</h1>
       <p class="close">X</p>
       <hr />
       <section class="content">
@@ -293,13 +259,15 @@
           <h3 class="scoreHead3">Time Taken <span id="timeTaken"></span></h3>
           <h3 class="scoreHead4">| Character <span id="charCount"></span></h3>
         </section>
-        <section class="right"><img src="keyboard.png" id="keyImg" /></section>
+        <section class="right">
+          <img src="Assets/keyboard.png" id="keyImg" />
+        </section>
       </section>
     </div>
-    <audio id="myAudio" src="coin-sound.mp3"></audio>
-    <audio id="myAudio2" src="game-over-arcade.mp3"></audio>
-    <audio id="myAudio4" src="level-win.mp3"></audio>
-    <audio id="myAudio3" src="message-incoming.mp3"></audio>
+    <audio id="spaceAudio1" src="Assets/key-2.mp3"></audio>
+    <audio id="spaceAudio2" src="Assets/key-1.mp3"></audio>
+    <audio id="myAudio1" src="Assets/result-2.mp3"></audio>
+    <audio id="myAudio2" src="Assets/result-1.mp3"></audio>
 
     <div class="footer">
       <p>
