Caps Lock feature Added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="wrapper">
       <button class="warning hidden">
-        <img src="lock.png" width="20px" height="20px" alt="" />Caps Lock
+        <img src="Assets/lock.png" width="20px" height="20px" alt="" />Caps Lock
       </button>
       <div class="container">
         <p class="counter">0 / 171</p>
